--- a/Task.html
+++ b/Task.html
@@ -1,24 +1,25 @@
+<!DOCTYPE html>
 <html>
-    <head> 
+    <head>
+		<title>Creating Web Page</title>
+		<link rel = "icon" href = "unname.jpg">
         <link rel="stylesheet" href="Task.css">
-		<link rel = "icon" href = "unname.png"> 
     </head>
 
     <body>
-		<div class="logo" style="background-color: red;">
-			<img src="unname.png">
-		</div>
-
-		<h1> <b>Knowledge Search</b></h1>
-		<div class="Workspace"> 
-			<input placeholder="Web Search"> 
-		</div>
-
-		<div class="Buttons">	    
-			<button>Home </button></button> 
-			<button>Careers</button> 
-			<button>About Us</button>
-			<button>Contact Us</button>
-		</div>
-    </body>  
-</html>    
+		
+		<div class="logo">
+			<img src="unname.jpg">
+		</div>		
+		<h1>Knowledge Searching</h1>
+		<div class="Workspace">
+			<input placeholder="Web Search">
+				<div class="Bot">
+					<button class="button button1">Home </button>
+					<button class="button button2">Careers</button>
+					<button class="button button3">About Us</button>
+					<button class="button button4">Contact Us</button>
+				</div>
+	    </div>
+    </body>
+</html>
